# godot

./: .gitignore  Cargo.toml  Readme.md  TODO  ToDo  ToDo.md  build_all.sh  build_and_run.sh  build_and_run_release.sh  rotate.m
.idea_old/: modules.xml  workspace.xml
.idea_old2/: workspace.xml
birectional_tree/: Cargo.toml
code_snipptes/: bidirectional_mutable_tree.rs
cpu_kernel_raytracer/: Cargo.toml
cpu_kernel_raytracer/examples/: comp.rs  cpu_compile.rs
cpu_kernel_raytracer/src/: lib.rs
cpu_kernel_raytracer/src/cpu/: cpu_kernel.rs  intersection.rs  intersection_list.rs  mod.rs
create_street/: Cargo.toml
create_street/src/: coord_axes.rs  main.rs  path_with_tilts.rs  walls_with_2_tilts.rs
cuda_kernel_raytracer/: Cargo.toml  build.rs
cuda_kernel_raytracer/src/: main.rs
cuda_kernel_raytracer/src/cuda/: cuda_kernel.rs  intersection.rs  intersection_list.rs  mod.rs  shape_idx_list.rs
curves/: Cargo.toml
cyclone-rs/: Cargo.toml
cyclone-rs/examples/: piston.rs
cyclone-rs/src/: lib.rs
cyclone-rs/src/contact_resolver/: mod.rs  particle_contact_resolver.rs
cyclone-rs/src/cyclone_math/: mod.rs  quaternion.rs  vector3.rs
cyclone-rs/src/force/: mod.rs
cyclone-rs/src/particle/: particle.rs
cyclone-rs/src/particle_contacts/: mod.rs
examples/: chapter07.rs  chapter07.rs_  chapter09.rs  chapter09.rs_  chapter10.rs  chapter10.rs_  chapter12.rs  chapter12.rs_  chapter121._rs  chapter14.rs  compare_to_cuda.rs  compare_to_cuda_debug.rs  coord_axis.rs  shadow_glamour_shot.rs  test_antialiasing.rs  test_soft_shadow.rs  test_vec_sort.rs
gallery/: chapter15_non_smoothed_teapot.rs  chapter15_smoothed_suzanne.rs  chapter15_smoothed_teapot.rs
math/: Cargo.toml
math/examples/: help_test_compile.rs  math_compile.rs
math/src/: lib.rs
math/src/matrix_math/: common.rs  math_ops.rs  matrix.rs  matrix3.rs  mod.rs  quaternion.rs  transform.rs  tuple3d.rs  tuple4d.rs
math/src/matrix_math/libm_cuda/: fabsf.rs  fmod.rs  powf.rs
math/src/matrix_math/libm_striped_to_pow/: atan.rs  atan2.rs  mod.rs  powf.rs  sqrtf.rs
micrograd-rs/: Cargo.toml  Readme.md  ToDo.md
micrograd-rs/examples/: moondata_separation.rs  moondata_separation_v2.rs  moondata_separation_v3.rs  simple_mlp.rs  simple_mlp_v2.rs  simple_mlp_v3.rs  simple_mlp_v4.rs  uniform_rand.rs
micrograd-rs/python/: mgrad_demo_from_jupyter_notebook.py  micrograd_test.py  micrograd_test2.py  micrograd_test_graph.py  micrograd_test_ops.py  micrograd_test_topo.py  moondata.ipynb  pytorch_add_broadcasting.py  tensor.py  test_loss.py  test_loss2.py  test_loss3.py  test_nn.py
micrograd-rs/python/.ipynb_checkpoints/: moondata-checkpoint.ipynb
micrograd-rs/python/mgrad/: engine.py  nn.py
micrograd-rs/python/rust_tests/: pytorch_matmul.py  pytorch_tensor.py  rust_test_add_broadcast.py  rust_test_sum_1dim.py  rust_test_sum_2dim.py
micrograd-rs/src/: graph.rs  graph_v1.rs  graph_v2.rs  graph_v3.rs  lib.rs  main.rs  micrograd_rs_engine_v2.rs  micrograd_rs_engine_v3.rs  micrograd_rs_engine_v4_tensor.rs  micrograd_rs_v1.rs  micrograd_rs_v2.rs  micrograd_rs_v3.rs  micrograd_rs_v4_backward.rs  micrograd_rs_v4_mathtensor.rs  micrograd_rs_v4_tensor.rs  micrograd_rs_v4_tensorinternal.rs  tensor.rs
nativegui/: Cargo.toml
nativegui-speedy/: Cargo.toml
nativegui-speedy/src/: main.rs  raytracer.rs  renderer.rs
nativegui/src/: main.rs
raytracer/: Cargo.toml
raytracer/examples/: comp.rs  geometry_pos.rs  raytracer_compile.rs
raytracer/src/: lib.rs
raytracer/src/backend/: backend.rs  backend_cpu.rs  backend_cpu_multi_core.rs  backend_cpu_single_core.rs  backend_cuda.1rs  backend_cuda.rs  backend_helper.rs  backend_wasm.rs  mod.rs
raytracer/src/utils/: geometry_position.rs  mod.rs
raytracer_example/: Cargo.toml
raytracer_example/src/: chapter14_with_aa.rs  compare_to_cuda.rs  compare_to_cuda_world.rs  dummy_world.rs  main.rs  shadow_glamour_shot.rs  test_soft_shadow_aka_area_light.rs
raytracer_lib_no_std/: Cargo.toml
raytracer_lib_no_std/examples/: help_test_compile.rs
raytracer_lib_no_std/src/: lib.rs
raytracer_lib_no_std/src/basics/: camera.rs  color.rs  mod.rs  pixel.rs  precomputed_component.rs  ray.rs
raytracer_lib_no_std/src/kernel/: intersection.rs  intersection_list.rs  mod.rs  raytracer_kernel.rs  shape_idx_list.rs
raytracer_lib_no_std/src/light/: arealight.rs  light.rs  mod.rs  pointlight.rs
raytracer_lib_no_std/src/material/: material.rs  mod.rs
raytracer_lib_no_std/src/math/: common.rs  math.rs  matrix.rs  mod.rs  tuple4d.rs
raytracer_lib_no_std/src/math/libm_striped_to_pow/: README.md  mod.rs  powf.rs
raytracer_lib_no_std/src/patterns/: checker3d_pattern.rs  gradient_pattern.rs  mod.rs  patterns.rs  ring_pattern.rs  stripe_patterns.rs  test_pattern.rs
raytracer_lib_no_std/src/shape/: cube.rs  cylinder.rs  mod.rs  plane.rs  shape.rs  sphere.rs  triangle.rs
raytracer_lib_std/: Cargo.toml
raytracer_lib_std/examples/: comp.rs  ray_lib_compile.rs
raytracer_lib_std/src/: canvas.rs  canvas_std.rs  lib.rs  scene.rs  world.rs
raytracer_lib_std/src/canvas/: canvas.rs  mod.rs  pixel.rs
raytracer_lib_std/src/scene/: mod.rs  scene.rs
raytracer_lib_std/src/world/: mod.rs  world.rs
renderer_benny/: Cargo.toml  readme.md
renderer_benny/examples/: test_monkey.rs  test_piston.rs
renderer_benny/src/: lib.rs
renderer_benny/src/game/: game.rs  game_speedy.rs  mod.rs
renderer_benny/src/math/: common.rs  matrix.rs  matrix3.rs  mod.rs  quaternion.rs  transform.rs  tuple3d.rs  tuple4d.rs
renderer_benny/src/renderer/: camera.rs  canvas.rs  color.rs  edge.rs  gradient.rs  mesh.rs  mod.rs  pixel.rs  render_context.rs  vertex.rs
renderer_benny/src/utils/: indexed_model.rs  mod.rs  obj_file.rs
renderer_benny/src/web_app_sloooooow/: structs.rs
res/: License.md  (+1 more)
software_renderer/: Cargo.toml
software_renderer/examples/: test_vertex.rs
software_renderer/src/: camera.rs  canvas.rs  color.rs  edge.rs  gradient.rs  lib.rs  mesh.rs  pixel.rs  render_context.rs  vertex.rs
webgui/backend/: Cargo.toml
webgui/backend/src/: index_html.rs  main.rs  scene.rs  structs.rs
(+244 files in other folders)
