[package]
name = "cpu_kernel_raytracer"
version = "0.1.0"
authors = ["bumzack"]
edition = "2018"

[features]
cuda = ["raytracer_lib_no_std/cuda", "math/cuda"]
wasm = ["raytracer_lib_no_std/wasm", "math/wasm"]

[dependencies]
raytracer_lib_no_std = {path = "../raytracer_lib_no_std" }
math = { path = "../math/" }
