[package]
name = "create_street"
version = "0.1.0"
authors = ["bumzack <bumzacktrara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.raytracer]
path =  "../raytracer"
features = [ "cuda" ]
