[package]
name = "cuda_kernel_raytracer"
version = "0.1.0"
authors = ["bumzack"]
edition = "2018"
build = "build.rs"

[build-dependencies]
ptx-builder = "0.5"

[target.'cfg(target_os = "cuda")'.dependencies]
ptx-support = { git  = "https://github.com/denzp/rust-ptx-support" }

[dependencies.raytracer_lib_no_std]
path = "../raytracer_lib_no_std"
features = ["cuda"]
