[package]
name = "math"
version = "0.1.0"
authors = ["bumzack"]
edition = "2018"


[features]
use_serde = [ "serde", "serde_json" , "serde_derive"]

[dependencies]

serde = { version = "*", features = ["derive"], optional = true }
serde_json ={  version = "*", optional = true }
serde_derive ={  version = "*", optional = true }

