[package]
name = "micrograd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.4.0"
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.6"
serde_json = "1.0.89"
rand = "0.8.1"
plotters = "0.3.1"
rand_distr = "0.4.1"

[dependencies.petgraph]
version = "0.6.1"
features = ["serde-1"]
