[package]
name = "nativegui-speedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = "1.9.0"

crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"

raytracer_challenge_reference_impl = { path = "../raytracer_challenge_reference_impl" }

simple_logger = { version = "4.0.0", default-features = false, features = ["colors"] }
log = "0.4.17"

render_benny = { path = "../renderer_benny" }

rayon = "1.6.1"