[package]
name = "nativegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.2"
piston_window = "0.127.0"

crossbeam-channel = "0.5.6"
raytracer_challenge_reference_impl = { path = "../raytracer_challenge_reference_impl" }
