[package]
name = "raytracer"
version = "0.1.0"
authors = ["bumzack"]
edition = "2018"

[features]
cuda = ["rustacuda", "rustacuda_derive", "rustacuda_core", "cpu_kernel_raytracer/cuda"]
use_serde = [ "raytracer_lib_std/use_serde", "raytracer_lib_no_std/use_serde" , "serde", "serde_json" , "serde_derive"]
wasm = ["cpu_kernel_raytracer/wasm"]
cpu_single_core = ["cpu_kernel_raytracer/cpu_single_core"]
cpu_multi_core = ["cpu_kernel_raytracer/cpu_multi_core"]

# default = ["wasm"]

[dependencies]
raytracer_lib_std = {path =  "../raytracer_lib_std" }
raytracer_lib_no_std = {path =  "../raytracer_lib_no_std" }

cpu_kernel_raytracer = { path = "../cpu_kernel_raytracer" }

rustacuda = { path = "../../RustaCUDA" , optional = true}
rustacuda_derive = { path = "../../RustaCUDA/rustacuda_derive/" , optional = true}
rustacuda_core = { path = "../../RustaCUDA/rustacuda_core/" , optional = true}

serde = { version = "*", features = ["derive"], optional = true }
serde_json ={  version = "*", optional = true }
serde_derive ={  version = "*", optional = true }

rayon = "*"

