[package]
name = "raytracer_lib_no_std"
version = "0.1.0"
authors = ["bumzack"]
edition = "2018"

# only needed for tests
[dev-dependencies]
cpu_kernel_raytracer = { path ="../cpu_kernel_raytracer" }
raytracer_lib_no_std = {path = "../raytracer_lib_no_std" }

[features]
cuda = ["rustacuda_derive", "rustacuda_core", "math/cuda" ]
use_serde = [ "serde", "serde_json" , "serde_derive", "math/use_serde" ]
wasm = [  "math/wasm"]

[dependencies]
rustacuda_derive = { path = "../../RustaCUDA/rustacuda_derive/" , optional = true}
rustacuda_core = { path = "../../RustaCUDA/rustacuda_core/" , optional = true}
math = { path = "../math/" }

# rand = { version = "0.7", default-features = false, features = ["small_rng"]}

serde = { version = "*", features = ["derive"], optional = true }
serde_json ={  version = "*", optional = true }
serde_derive ={  version = "*", optional = true }

