[package]
name = "render_benny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
pretty_env_logger = "0.4"
tracing-log = "0.1"

crossbeam-channel = "0.5.6"
crossbeam = "0.8.2"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"

rand = "*"

piston = "0.53.2"
piston_window = "0.127.0"
image = "0.24.5"