[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.4"
tracing-log = "0.1"

raytracer_challenge_reference_impl = { path = "../../raytracer_challenge_reference_impl" }

crossbeam-channel = "0.5.6"

[dev-dependencies]
